Fixed user-uploaded issue(throws half an error) on ipad (5932)  - Disabled perfect scrollbar in ipad  - Enabled  ios native scrolling  - Removed unnecessary codes  - Transferred  other codes to its proper scope

--- a/css/contentNavigation/content-navigation.less
+++ b/css/contentNavigation/content-navigation.less
@@ -379,3 +379,11 @@ html.cn {
 		}
 	}
 }
+
+html.touch {
+	.cn-sidebar {
+		overflow-y                 : scroll !important;
+		-webkit-overflow-scrolling : touch;
+		overflow-x                 : hidden;
+	}
+}
